--- a/Qt Designer/GUI-dataLoad.ui
+++ b/Qt Designer/GUI-dataLoad.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>734</width>
-    <height>525</height>
+    <height>606</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -149,8 +149,20 @@
              <property name="statusTip">
               <string>Drag a file into this box to load it</string>
              </property>
+             <property name="documentTitle">
+              <string>dasd</string>
+             </property>
+             <property name="overwriteMode">
+              <bool>true</bool>
+             </property>
              <property name="textInteractionFlags">
-              <set>Qt::NoTextInteraction</set>
+              <set>Qt::TextEditable</set>
+             </property>
+             <property name="backgroundVisible">
+              <bool>true</bool>
+             </property>
+             <property name="centerOnScroll">
+              <bool>true</bool>
              </property>
              <property name="placeholderText">
               <string>Please drag a datafile into this box</string>
@@ -293,8 +305,42 @@
           <property name="title">
            <string>Commands</string>
           </property>
-          <layout class="QHBoxLayout" name="horizontalLayout_6">
-           <item>
+          <layout class="QGridLayout" name="gridLayout">
+           <item row="2" column="1">
+            <widget class="QPushButton" name="showdata_btn">
+             <property name="text">
+              <string>Show data</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QComboBox" name="comboBox">
+             <item>
+              <property name="text">
+               <string>Each zone</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>All zones</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QPushButton" name="plot_btn">
+             <property name="toolTip">
+              <string>Click to visualize data</string>
+             </property>
+             <property name="statusTip">
+              <string>Click to visualize data in plots</string>
+             </property>
+             <property name="text">
+              <string>Visualize data</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
             <widget class="QPushButton" name="stat_btn">
              <property name="toolTip">
               <string>Click to display statistics</string>
@@ -307,16 +353,10 @@
              </property>
             </widget>
            </item>
-           <item>
-            <widget class="QPushButton" name="plot_btn">
-             <property name="toolTip">
-              <string>Click to visualize data</string>
-             </property>
-             <property name="statusTip">
-              <string>Click to visualize data in plots</string>
-             </property>
-             <property name="text">
-              <string>Visualize data</string>
+           <item row="1" column="0" colspan="2">
+            <widget class="Line" name="line_3">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
              </property>
             </widget>
            </item>
@@ -378,8 +418,6 @@
   <tabstop>agg_day_btn</tabstop>
   <tabstop>agg_month_btn</tabstop>
   <tabstop>agg_hDay_btn</tabstop>
-  <tabstop>stat_btn</tabstop>
-  <tabstop>plot_btn</tabstop>
   <tabstop>display_window</tabstop>
  </tabstops>
  <resources/>
